# ByoC

./: .pre-commit-config.yaml  Cargo.toml  LICENSE.txt  README.md  TODO.org  rustfmt.toml
benchmarks/: Cargo.toml
benchmarks/src/: lib.rs  microbenchmarks.rs  microbenchmarks_args.rs
benchmarks/src/action/: mod.rs  random.rs  single.rs
benchmarks/src/benchmarks/: action.rs  args.rs  benchmark.rs  initializer.rs  mod.rs  pattern.rs  set.rs
benchmarks/src/executor/: generic.rs  mod.rs  random.rs
benchmarks/src/generator/: default.rs  interleave.rs  mod.rs  random.rs  step.rs  zip.rs
benchmarks/src/initializer/: mod.rs  push.rs
benchmarks/src/microbenchmarks/: args.rs  mod.rs
benchmarks/src/utils/: csv.rs  iter.rs  mod.rs
src/: array.rs  associative.rs  batch.rs  btree.rs  building_block.rs  compression.rs  concurrent.rs  get.rs  lib.rs  lock.rs  marker.rs  multilevel.rs  ordered.rs  policy.rs  prefetch.rs  profiler.rs  sequential.rs  stream.rs  tests.rs  timestamp.rs
src/array/: array.rs  builder.rs  building_block.rs  config.rs  get.rs  mod.rs  ordered.rs  prefetch.rs
src/associative/: associative.rs  builder.rs  building_block.rs  concurrent.rs  config.rs  get.rs  mod.rs  multiset_hasher.rs  prefetch.rs
src/batch/: batch.rs  building_block.rs  config.rs  get.rs  mod.rs  prefetch.rs
src/btree/: btree.rs  builder.rs  building_block.rs  config.rs  get.rs  mod.rs  ordered.rs  prefetch.rs
src/builder/: array.rs  associative.rs  begin.rs  btree.rs  builder.rs  compression.rs  forward.rs  mod.rs  multilevel.rs  policy.rs  profiler.rs  sequential.rs  start.rs  stream.rs
src/building_block/: mod.rs
src/compression/: builder.rs  building_block.rs  compression.rs  config.rs  get.rs  mod.rs  ordered.rs  prefetch.rs
src/concurrent/: associative.rs  mod.rs  sequential.rs  tests.rs
src/config/: array.rs  associative.rs  batch.rs  btree.rs  builder.rs  compression.rs  config.rs  config_builder.rs  dyn_traits.rs  error.rs  generic_config.rs  mod.rs  multilevel.rs  policy.rs  profiler.rs  sequential.rs  stream.rs  tests.rs
src/connector/: forward.rs  mod.rs  multilevel.rs  stack.rs
src/container/: array.rs  associative.rs  btree.rs  filemap.rs  map.rs  mod.rs  profiler.rs  sequential.rs  stack.rs  stream.rs  tests.rs  top_k.rs  vector.rs
src/decorator/: builder.rs  building_block.rs  concurrent.rs  config.rs  decorator.rs  default.rs  fifo.rs  get.rs  lrfu.rs  lru.rs  mod.rs
src/exclusive/: builder.rs  building_block.rs  config.rs  exclusive.rs  get.rs  mod.rs  ordered.rs
src/flush_stopper/: builder.rs  building_block.rs  config.rs  flush_stopper.rs  get.rs  mod.rs
src/inclusive/: builder.rs  building_block.rs  config.rs  get.rs  inclusive.rs  mod.rs  ordered.rs
src/internal/: io_vec.rs  kmin.rs  lock.rs  mod.rs  shared_ptr.rs
src/multilevel/: building_block.rs  get.rs  mod.rs  multilevel.rs  prefetch.rs
src/multiplexer/: associative.rs  mod.rs
src/objsafe/: building_block.rs  concurrent.rs  mod.rs
src/policies/: default.rs  fifo.rs  lrfu.rs  lru.rs  mod.rs  timestamp.rs
src/policy/: builder.rs  building_block.rs  concurrent.rs  config.rs  default.rs  fifo.rs  get.rs  lrfu.rs  lru.rs  mod.rs  policy.rs  tests.rs  timestamp.rs
src/private/: bits.rs  clone.rs  io_vec.rs  lock.rs  mod.rs  ptr.rs  set.rs
src/profiler/: builder.rs  building_block.rs  concurrent.rs  config.rs  get.rs  mod.rs  ordered.rs  prefetch.rs  profiler.rs  stats.rs
src/reference/: default.rs  fifo.rs  lrfu.rs  lru.rs  mod.rs  priority.rs
src/sequential/: builder.rs  building_block.rs  concurrent.rs  config.rs  get.rs  mod.rs  ordered.rs  prefetch.rs  sequential.rs
src/socket/: builder.rs  building_block.rs  client.rs  config.rs  error.rs  get.rs  message.rs  mod.rs  server.rs  server_thread.rs  tests.rs
src/stream/: builder.rs  building_block.rs  config.rs  error.rs  file_stream.rs  get.rs  io_vec.rs  mod.rs  ordered.rs  prefetch.rs  stream.rs  vec_stream.rs
src/streams/: file_stream.rs  io_vec.rs  mod.rs  vec_stream.rs
src/tests/: building_block.rs  concurrent.rs  get.rs  mod.rs  ordered.rs
src/traits/: building_block.rs  concurrent.rs  get.rs  mod.rs
src/utils/: clone.rs  flush.rs  io.rs  lifetime.rs  lock.rs  mod.rs  num.rs  ptr.rs  rand.rs  set.rs  shared_ptr.rs  size.rs  stats.rs  stream.rs  timestamp.rs  vstream.rs
src/wrapper/: mod.rs  profiler.rs  sequential.rs
tests/: associative_container.rs  btree.rs  btree_container.rs  clone.rs  filemap_container.rs  map.rs  map_container.rs  sequential.rs  sequential_container.rs  stack_container.rs  top_k.rs  top_k_container.rs  vector.rs  vector_container.rs
(+40 files in other folders)
