[package]
name = "byoc"
version = "0.1.0"
authors = ["ndenoyelle <ndenoyelle@anl.gov>"]
repository = "https://github.com/NicolasDenoyelle/ByoC"
description = "A library to build and benchmark key value store containers."
readme = "README.md"
license-file = "LICENSE.txt"
keywords = [ "key value store", "cache", "map", "LRFU" ]
edition = "2021"
publish = false

[badges]
maintenance = { status = "experimental" }

[dependencies]
tempfile = { version = "3.2.0", optional = true }
serde = { version = "1.0.125", optional = true }
bincode = { version = "1.3.3", optional = true }
lz4 = { version = "1.23.2", optional = true }

[dev-dependencies]
rand = "0.8.3"

[features]
default = []
# Feature enabling building block implementation into a stream of bytes.
# Converting structure to bytes requires to be able to serialize and
# deserialize from the stream (serde + bincode).
# Additionally, tempfile is used to generate the files where the key/value
# are stored.
stream = [ "serde", "bincode", "tempfile" ]
# Feature enabling building block implementations compressing data into a
# stream
compression = [ "stream", "lz4" ]
