[package]
name = "byoc"
version = "0.1.0"
authors = ["ndenoyelle <ndenoyelle@anl.gov>"]
repository = "https://github.com/NicolasDenoyelle/ByoC"
description = "A library to build and benchmark key value store containers."
readme = "README.md"
license-file = "LICENSE.txt"
keywords = [ "key", "value", "store", "cache", "map" ]
edition = "2021"
publish = false

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
rand = "0.8.3"

[dependencies]
tempfile = { version = "3.2.0", optional = true }
serde = { version = "1.0.125", optional = true, features = ["derive"] }
bincode = { version = "1.3.3", optional = true }
lz4 = { version = "1.23.2", optional = true }
toml = { version = "0.5", optional = true }

[features]
default = []
# Enable building block implementations compressing data into a stream.
compression = [ "stream", "lz4" ]
# Enable instantiating building block containers from a configuration file.
config = [ "toml", "serde" ]
# Enable instantiating building block channel through sockets.
socket = [ "serde", "bincode" ]
# Enable building block implementation into a stream of bytes.
# Converting structure to bytes requires to be able to serialize and
# deserialize from the stream (serde + bincode).
# Additionally, tempfile is used to generate the files where the key/value
# are stored.
stream = [ "socket", "tempfile" ]
